# ECE4730J-Degree-Project

./: .gitignore  Experiments.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  raspberry_pi4.yaml  raspberry_pi4_1gb.yaml  raspberry_pi5.yaml
configs/strategies/: default.yaml  fixed_frame_skip.yaml  fixed_low_power.yaml  native_rtdetr.yaml  scene_only.yaml  scene_thermal_coadaptive.yaml  scene_thermal_interval_first.yaml  scene_thermal_interval_lk.yaml  scene_track_lk.yaml  static_affinity.yaml  thermal_balanced.yaml  thermal_interval_first.yaml  thermal_only.yaml
docs/: coding_guidelines.md  contribution_guide.md  experiment_protocol.md  project_overview.md  setup_raspberry_pi.md  thermal_experiment_design.md
experiments/: README.md
scripts/: benchmark_runtime_knobs.py  check_runtime_action_support.py  clone_rtdetr.sh  csv_logs.py  detect_track_lk.py  evaluate_experiment_quality_tradeoff.py  evaluate_resolution_quality.py  evaluate_strategy_detection_quality.py  evaluate_tracking_quality.py  export_model_onnx.sh  generate_thermal_test_logs.py  inspect_onnx_shapes.py  parse_ort_profile.py  plot_inference_details.py  plot_profile_pie.py  plot_results.py  run_baseline.py  run_controller.py  run_experiment.py  run_live_dashboard.py  run_thermal_experiment_suite.py  setup_env.sh  setup_rtdetr_export_env.sh  summarize_baseline.py  visualize_detections.py
tests/: test_action_applier.py  test_arm_clock.py  test_controller_policy.py  test_device_monitor.py  test_logger.py  test_postprocess.py  test_scene_features.py
(+43 files in other folders)
