[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-runtime"
version = "0.1.0"
description = "Scene-thermal co-adaptive RT-DETR runtime for Raspberry Pi edge inference"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
inference = ["onnxruntime>=1.16.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "matplotlib>=3.7.0", "pandas>=2.0.0"]

[project.scripts]
scene-runtime-experiment = "scene_runtime.cli:main_experiment"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
